2/12/14 revised 'Custom' screen icon, .ai file for all screen icons
# 1.0.0-dev.12 2/12/14
2/12/14 change tap-to-dispense parameters: flowRate=0.15, interval=333
2/12/14 lighten color of pH probe from RGB(80,80,80) to RGB(140,140,140)
2/12/14 new screen names: Basics -> Macro, Solutions -> Micro
2/12/14 new icon for 'Custom' screen
# 1.0.0-dev.11 2/12/14
2/12/14 add tap-to-dispense feature to faucets, dispense 0.01L in 0.5 sec
2/11/14 temporarily hide the 'ratio' feature if we're not running in dev mode, so it doesn't interfere with interviews
# 1.0.0-dev.10 2/10/14
2/10/14 offset the H2O indicator when off scale, so it doesn't butt up again OH indicator
2/10/14 shorten line between expand/collapse box and graph scale, remove masking hack from linear graph
2/10/14 reduce height of linear scale a bit, so that zoom buttons aren't crowded by graph indicators, may make them more inviting
2/10/14 restore original height of log scale in 'Solutions' so that indicators don't overlap scale switch when beaker is empty
2/10/14 increase height of arrow head on linear graph
2/10/14 increase y-margin on linear scale, so that it looks more balanced and is similar to log scale
2/10/14 increase horizontal spacing between zoom buttons a bit, increase touch areas
2/10/14 Custom: made log scale a tag shorter, so that there's some whitespace below graph indicators when they're dragged to bottom of screen
2/10/14 reduce y-margin on log scale from 40 to 30
2/10/14 make log scale taller in 'Solutions' screen
2/10/14 decouple heights of log and linear scales
2/10/14 fix display of H2O values on graph indicators, broken when I rewrote toScientificNotation on 1/29/14
2/10/14 make arrow always visible in linear graph, not just when some value is off-scale
2/10/14 add a break below arrow head in linear graph
2/10/14 slow down auto-fill animation (from 0.5 sec to 0.65 sec) because it seemed a little fast