@@ -26,7 +26,7 @@ define( function( require ) {
     FaucetNode.call( this, faucet.maxFlowRate, faucet.flowRateProperty, faucet.enabledProperty, {
       horizontalPipeLength: horizontalPipeLength,
       verticalPipeLength: 5,
-      tapToDispenseFlowRate: PHScaleConstants.TAP_TO_DISPENSE_FLOW_RATE,
+      tapToDispenseAmount: PHScaleConstants.TAP_TO_DISPENSE_AMOUNT,
       tapToDispenseInterval: PHScaleConstants.TAP_TO_DISPENSE_INTERVAL
     } );
     this.translation = mvt.modelToViewPosition( faucet.location );
